<resources>
    <string name="app_name">TokoGlints</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="items">Good Lists</string>
    <string name="save">Save</string>
</resources>
